---
source: extensions/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"moon.yml\")).unwrap()"
---
fileGroups:
  variants:
  - $FOO_BAR
  - glob: '**/*'
    cache: true
  - glob: '**/*'
    cache: true
  - glob: '!**/*'
    cache: true
  - glob: /**/*
    cache: true
  - glob: '!/**/*'
    cache: true
  - file: src/file.ts
  - glob: src/file.*
    cache: true
  - file: src
language: javascript
toolchains:
  default: node
